# emotion-companion

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/chat/: Chat.example.tsx  Chat.tsx  Composer.tsx  CrisisCard.tsx  MessageBubble.tsx  MessageList.tsx  StreamingIndicator.tsx  UsageReminderToast.tsx  index.ts  mapMessages.test.ts  mapMessages.ts  theme.ts  types.ts
apps/web/src/lib/: conversations.ts
data/seed/: README.md  cbt_techniques.md  crisis_protocol.md  empathy_strategies.jsonl
docs/: architecture.md  compliance.md  research-report.md
scripts/: init_db.sql  seed_knowledge.sh  setup.sh
server/: pyproject.toml
server/app/: main.py
server/app/api/: embedding.py  rerank.py  safety.py  test_embed_rerank.py  test_safety.py
server/app/core/: config.py  db.py
server/app/services/: crisis.py  embedding.py
server/data_pipeline/: chunk.py  clean.py  collect.py  compliance_filter.py  ingest.py  licenses.py  run_demo.py  schema.py  test_pipeline.py
server/eval/: README.md  __init__.py  common.py  eval_crisis.py  eval_empathy.py  eval_rag.py  run_all.py  test_eval.py
server/eval/datasets/: crisis.jsonl  empathy.jsonl  rag.jsonl
server/eval/reports/: crisis.json  empathy.json  rag.json  summary.json
server/training/: README.md  digital_twin.py  prepare_dataset.py  test_pipeline.py  train_lora.py
site/: index.html
(+12 files in other folders)
