[project]
name = "emotion-companion-server"
version = "0.1.0"
description = "情感陪伴 server:bge-m3 embedding / reranker / 危机分类器推理 / mem0 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
    "pgvector>=0.2.5",
    "sentence-transformers>=2.7",
    "FlagEmbedding>=1.2.10",
    "transformers>=4.40",
    "torch>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
